--- a/SpringMVCProject/springmvc-web/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMVCProject/springmvc-web/src/main/webapp/WEB-INF/web.xml
@@ -43,4 +43,9 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/pages/errors/notFound.jsp</location>
+	</error-page>
+
 </web-app>
